# scribe

./: .gitignore  LICENSE  README.md  pyproject.toml  scribe.py  scribe_picker.zsh
.github/: dependabot.yml
docs/brainstorms/: 2026-06-27-meeting-summary-api-workflow-requirements.md
docs/context/: 2026-06-06-meeting-workflow-session.md
docs/plans/: 2026-06-27-001-feat-meeting-summary-workflow-plan.md
tests/: test_scribe.py
