[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribe"
version = "0.1.0"
description = "Local transcription and speaker diarization with pyannote and parakeet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pyannote.audio>=4.0,<5",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "soundfile>=0.13.1",
]

[project.scripts]
scribe = "scribe:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "ty>=0.0.14"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # trailing comma missing — conflicts with ruff formatter
    "ISC001",  # implicit string concat — conflicts with ruff formatter
    "D203",    # blank line before class — incompatible with D211
    "D213",    # multi-line-summary-second-line — incompatible with D212
    "FIX",     # fixme/todo markers — not applicable
    "TD",      # todo comment format — not applicable
    "TRY003",  # long exception messages — conflicts with EM pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # type annotations not required in tests
    "D",        # docstrings not required in tests
    "S101",     # assert is standard in pytest
    "PLR2004",  # magic values are standard in test assertions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
